Make ERR_ICANN_NAME_COLLISION work for async DNS resolver.

BUG=670093

Review-Url: https://codereview.chromium.org/2567623003
Cr-Commit-Position: refs/heads/master@{#438346}

Former-commit-id: 1efc237c5f0ef90195c3dd54e2d63f3e056194be